unpackaged/main/default/objects/User/fields/Assessor__c.field-meta.xml
<CustomField>
    <fullName>Assessor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this box is checked, this user will be available to select during the allocation phase of the application/renewals.</description>
    <inlineHelpText>Check this box if the user is an assessor.</inlineHelpText>
    <label>Assessor</label>
    <type>Checkbox</type>
</CustomField>