unpackaged/main/default/objects/User/fields/Contract_Assessor__c.field-meta.xml
<CustomField>
    <fullName>Contract_Assessor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contract Assessor</label>
    <type>Checkbox</type>
</CustomField>