unpackaged/main/default/objects/User/fields/Unit_Types_Assessed__c.field-meta.xml
<CustomField>
    <fullName>Unit_Types_Assessed__c</fullName>
    <description>Used to identify best assessor based on species</description>
    <inlineHelpText>What types of unit is this assessor trained to assess?</inlineHelpText>
    <label>Unit Types Assessed</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Abattoirs (fish)</fullName>
            </value>
            <value>
                <fullName>Abattoirs (livestock)</fullName>
            </value>
            <value>
                <fullName>Abattoirs (poultry)</fullName>
            </value>
            <value>
                <fullName>Beef Cattle</fullName>
            </value>
            <value>
                <fullName>Chickens</fullName>
            </value>
            <value>
                <fullName>Dairy Cattle</fullName>
            </value>
            <value>
                <fullName>Ducks</fullName>
            </value>
            <value>
                <fullName>Hatcheries (fish)</fullName>
            </value>
            <value>
                <fullName>Hatcheries (poultry)</fullName>
            </value>
            <value>
                <fullName>Hauliers (fish)</fullName>
            </value>
            <value>
                <fullName>Hauliers (livestock)</fullName>
            </value>
            <value>
                <fullName>Hauliers (poultry)</fullName>
            </value>
            <value>
                <fullName>Hens</fullName>
            </value>
            <value>
                <fullName>Pigs</fullName>
            </value>
            <value>
                <fullName>Pullets</fullName>
            </value>
            <value>
                <fullName>Sheep</fullName>
            </value>
            <value>
                <fullName>Turkeys</fullName>
            </value>
            <value>
                <fullName>Veal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>