unpackaged/main/default/objects/User/listViews/HO_Community_user_actives.listView-meta.xml
<ListView>
    <fullName>HO_Community_user_actives</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>equals</operation>
        <value>RSPCA Assured Community User Head Office</value>
    </filters>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>HO Community users Active</label>
    <language>en_US</language>
    <sharedTo>
        <group>Membership_Services</group>
    </sharedTo>
</ListView>